<resources>
    <string name="app_name">GoogleBooks</string>
    <string name="home">Home</string>
    <string name="star">Star</string>
    <string name="setting">Settings</string>
    <string name="search_text">Search</string>
    <string name="link_text">Click to view</string>
    <string name="error_text">Some Error Occurred</string>
    <string name="retry_text">Retry</string>
    <string name="welcome_text_register">Welcome!</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="sign_in_text">Sign In</string>
    <string name="signup_text">Sign Up</string>
    <string name="subtitle_text_register">Get the best from our app</string>
    <string name="info_text">Personal Info</string>
    <string name="person_name">First Name</string>
    <string name="person_last">Last Name</string>
    <string name="person_age">Age</string>
    <string name="log_out_text">Do you want to Log out?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="sign_out">Sign Out</string>
    <string name="default_text_list">IT</string>

</resources>